work/cb/562d1b7020c66e0fd24de8b4b1fc5f/.command.err
  File "/cluster/home/ayocca/03_RGE/12_reads2pav/readstopav/bin/calc_pav.py", line 83
    if cov_gff[gene]["Cov"] / cov_gff[gene]["Length"] >= float(depth_threshold) 
                                                                               ^
SyntaxError: invalid syntax
